# dimos

./: .envrc  .gitattributes  .gitignore  CONTRIBUTING.md  NEWREADME.MD  README.md  RERUN_PR_ANALYSIS.md  flake.nix  pyproject.toml  requirements.txt  rerun_pr_comparison.diff.REMOVED.git-id  uv.lock.REMOVED.git-id
.devcontainer/: devcontainer.json
.github/workflows/: _docker-build-template.yml  docker.yml  fast-docs.yml  fast-test.yml  tests.yml
.openclaw/: smart_nav_state.json
autoresearch/: eval.py
dimos/: __init__.py  conftest.py  convert.py  quantity.py  types.py  units.py
dimos/agents/: agent.py  agent_ctransformers_gguf.py  agent_huggingface_local.py  agent_huggingface_remote.py  cerebras_agent.py  claude_agent.py  planning_agent.py  test_agent_image_message.py  test_agent_message_streams.py  test_agent_tools.py  test_mock_agent.py  test_simple_agent_module.py
dimos/agents2/: __init__.py  agent.py  main.py  spec.py  test_agent.py  test_agent_direct.py  test_main.py
dimos/control/: __init__.py  blueprints.py  coordinator.py  hardware_interface.py
dimos/core/: __init__.py  _torch_preload.py  blueprints.py  core.py  daemon.py  docker_build.py  docker_module.py  docker_runner.py  global_config.py  module.py  module_coordinator.py  module_dask.py  native_module.py  rpc_client.py  test_core.py  test_lcmmsg_gen.py  test_native_module.py  test_stream.py  transport.py  worker.py  worker_manager.py
dimos/dashboard/: module.py  server.py
dimos/e2e_tests/: test_manipulation_module.py  test_security_module.py  test_smartnav_replay.py
dimos/hardware/: fake_zed_module.py  gstreamer_camera.py  lerobot_kinematics.py  piper_arm.py  so101_arm.py  ufactory.py  zed_camera.py
dimos/manipulation/: blueprints.py  manip_aio_pipeline.py  manip_aio_processer.py  manipulation_history.py  manipulation_interface.py  manipulation_module.py  manipulation_skills.py  test_manipulation_unit.py
dimos/mapping/: costmapper.py  voxelmapper_native.py  voxels.py
dimos/mapping/voxelmapper_rust/: Cargo.toml
dimos/mapping/voxelmapper_rust/src/: main.rs
dimos/memory/: __init__.py  formatting.py  module.py  store.py  stream.py  test_stream_repr.py  test_transformer.py  transformer.py  types.py
dimos/memory2/: backend.py  buffer.py  module.py  store.py  stream.py  test_module.py  test_store.py  test_visualizer.py  transform.py  type.py
dimos/navigation/: bbox_navigation.py  cmd_vel_mux.py  dimos_module_entrypoint.sh  rosnav.py  rosnav_docker.py  scan_corrector.py  test_rosnav_docker.py
dimos/navigation/smartnav/: .gitignore  CMakeLists.txt  __init__.py  flake.nix  ros1_deserializer.py
dimos/navigation/smartnav/blueprints/: __init__.py  _rerun_helpers.py  real_robot.py  simulation.py  simulation_explore.py  simulation_pgo.py  simulation_route.py  simulation_slam.py
dimos/navigation/smartnav/modules/: __init__.py
dimos/navigation/smartnav/modules/arise_slam/: arise_slam.py  test_arise_slam.py
dimos/navigation/smartnav/modules/click_to_goal/: click_to_goal.py
dimos/navigation/smartnav/modules/far_planner/: far_planner.py  main.cpp  test_far_planner.py
dimos/navigation/smartnav/modules/global_map/: global_map.py
dimos/navigation/smartnav/modules/local_planner/: local_planner.py  main.cpp  test_local_planner.py
dimos/navigation/smartnav/modules/path_follower/: path_follower.py  test_path_follower.py
dimos/navigation/smartnav/modules/pgo/: main.cpp  pgo.py  pgo_reference.py  test_pgo.py
dimos/navigation/smartnav/modules/sensor_scan_generation/: sensor_scan_generation.py  test_sensor_scan_generation.py
dimos/navigation/smartnav/modules/tare_planner/: tare_planner.py  test_tare_planner.py
dimos/navigation/smartnav/modules/terrain_analysis/: terrain_analysis.py  test_terrain_analysis.py
dimos/navigation/smartnav/modules/terrain_map_ext/: terrain_map_ext.py
dimos/navigation/smartnav/modules/tui_control/: test_tui_control.py  tui_control.py
dimos/navigation/smartnav/modules/unity_bridge/: test_unity_bridge.py  unity_bridge.py
dimos/navigation/smartnav/tests/: test_explore_movement.py  test_full_nav_loop.py  test_nav_loop.py  test_nav_loop_drive.py  test_paths_and_blueprint.py  test_pgo_global_map.py  test_sim_pipeline.py  test_waypoint_nav.py
dimos/perception/: manip_aio_processer.py  object_detection_stream.py  object_tracker.py  object_tracker_2d.py  object_tracker_3d.py  person_tracker.py  spatial_perception.py  test_spatial_memory.py  test_spatial_memory_module.py
dimos/record/: test_record_replay.py
dimos/robot/: all_blueprints.py  foxglove_bridge.py  local_planner.py  position_stream.py  robot.py  ros_bridge.py  ros_command_queue.py  ros_control.py  ros_observable_topic.py  ros_skill_library.py  ros_transform.py  test_all_blueprints_generation.py  test_ros_observable_topic.py
dimos/rxpy_backpressure/: drop.py  sized_buffer.py
dimos/skills/: kill_skill.py  navigation.py  skills.py  speak.py  visual_navigation_skills.py
dimos/stream/: data_provider.py  ros_video_provider.py  rtsp_video_provider.py
dimos/types/: costmap.py  position.py  ros_polyfill.py  test_position.py  test_timestamped.py  timestamped.py  vector.py
dimos/utils/: data.py  logging_config.py  monitoring.py  reactive.py  ros_utils.py  test_testing.py  test_thread_utils.py  testing.py  (+3 more)
docs/: VIEWER_BACKENDS.md  testing_stream_reply.md
hackathon/: people_monitor.py  surveillance_skill.py  surveillance_store.py
installer/: flake.nix
plans/: memory3.md  questions.md
ros_docker_integration/: README.md  build.sh
scripts/: install.sh  run_inference.py  save_camera_images.py
tests/: agent_memory_test.py  run.py  run_go2_ros.py  run_webrtc.py  so101_control_test.py  so101_fk_ik_test.py  so101_free_move.py  so101_ik_test.py  test_cerebras_agent_mock.py  test_claude_agent_query.py  test_claude_agent_skills_query.py  test_header.py  test_image_backends.py  test_skill_library.py  test_skills.py  test_so101_pick_and_place.py  test_unitree_agent_queries_fastapi.py  test_webrtc_queue.py  test_websocketvis.py  test_xarm_driver_unit.py  test_xarm_rt_driver.py  test_zed_module.py
(+506 files in other folders)
